--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <html>
   <head>
    <title>Hello World!</title>
+   <style>
+     .blue{ color:blue; }
+     .red{ color:red; }
+     #big{ front:size:120%;}
+    </style>
   </head>
   <body>
     <div>
-    <h1>Top Level Heading</h1>
-    <h2>Second Level Heading</h2>
-    <p>Paragraph with a <span>span</span> in it</p>
+      <h1>Hello World!</h1>
+      <h2>Level 2 heading</h2>
+      <p>This is a <span calss = 'blue'>blue span</span> in it</p>
+      <p>This is a <span calss = 'red'>red span</span> in it</p>
     </div>
   </body>
 </html>
