--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
    <title>Hello World!</title>
    <style>
+     h1{front
      .blue{ color:blue; }
      .red{ color:red; }
      #big{ front:size:120%;}
@@ -11,8 +12,8 @@
     <div>
       <h1>Hello World!</h1>
       <h2>Level 2 heading</h2>
-      <p>This is a <span calss = 'blue'>blue span</span> in it</p>
-      <p>This is a <span calss = 'red'>red span</span> in it</p>
+      <p>This is a <span class = 'blue'>blue span</span> in it</p>
+      <p>This is a <span class = 'red'>red span</span> in it</p>
     </div>
   </body>
 </html>
